--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://josethegreat.netlify.app/
+baseURL: https://joseportfolio2021.netlify.app/
 languageCode: en-us
 title: Welcome to Jose's Wonderful Website 
 theme: forty
