Last of the day

--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ googleAnalytics: ''
 disqusShortname: ''
 params:
   banner:
-    buttonText: Get Started
+    buttonText: Learn More
     subtitle: |-
       AN INCREDIBLE PLACE THAT WILL CHANGE YOUR PERCEPTION OF THE WEB
     title: Hi, my name is Jose. It is my pleasure to have you here. 
