--- a/config.yaml
+++ b/config.yaml
@@ -98,8 +98,8 @@ params:
         url: blogs/gdp
 
   two:
-    buttonText: Learn More
-    enable: yes
+    #buttonText: Learn More
+    #enable: yes
     subtitle: "We are alive because we are in motion. I am a firm believer in challenge seeking 
       \r\n    as a path for self development and growth. \r\n I also believe we should all strive to 
       make a positive impact.\r\n    Thus, I aim to align my professional career with my values.\r\n"
