New and improved blogs

--- a/config.yaml
+++ b/config.yaml
@@ -100,8 +100,7 @@ params:
   two:
     #buttonText: Learn More
     #enable: yes
-    subtitle: "We are alive because we are in motion. I am a firm believer in challenge seeking 
-      \r\n    as a path for self development and growth. \r\n I also believe we should all strive to 
-      make a positive impact.\r\n    Thus, I aim to align my professional career with my values.\r\n"
+    subtitle: "Always looking for ways to challenge myself.\r\n 
+    "
     title: What I stand for
     url: blogs
