--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ params:
   banner:
     buttonText: Learn More
     subtitle: |-
-      AN INCREDIBLE PLACE THAT WILL CHANGE YOUR PERCEPTION OF THE WEB
+      THEY SAY NEVER JUDGE A BOOK BY ITS COVER. WELCOME TO MY COVER
     title: Hi, my name is Jose. It is my pleasure to have you here. 
   blog: {}
   contact:
